<resources>
    <string name="app_name">TimePie</string>
    <string name="back4app_server_url">https://parseapi.back4app.com/</string>

    <!-- Paste BOTH strings as required -->
    <string name="back4app_app_id">gPy1h7yfht7S2X6D8myjtgpiVFpoHDgSCtX37C8S</string>
    <string name="back4app_client_key">nTbJ17SX17qYrVIz2zSnOiZijlLP5gtqT46Sfwkm</string>
    <string name="supplements">Supplements</string>
    <string name="edit_supplement">Edit Supplement</string>
    <string name="newString">New</string>
    <string name="done">Done</string>
    <string name="name">Name</string>
    <string name="new_supplement">New Supplement</string>
    <string name="supplement_name">Supplement Name</string>
    <string name="description">Description</string>
    <string name="edit_supplement_description">Enter the supplement description here</string>
    <string name="x_times_daily">X times daily</string>

    <string name="selected_item">Daily Frequency</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="daily_frequency">Daily Frequency</string>
    <string name="weekly_frequency">Weekly Frequency</string>
    <string name="sun">Sun</string>
    <string name="mon">Mon</string>
    <string name="tue">Tue</string>
    <string name="wed">Wed</string>
    <string name="thu">Thu</string>
    <string name="fri">Fri</string>
    <string name="sat">Sat</string>
    <string-array name="daily_frequency_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
</resources>